package nl.tradecloud.kafka;

message SerializedMessageMsg {
  required bytes message = 1;
  required int32 serializerId = 2;
  optional bytes messageManifest = 3;
}